--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Confectionery -- Juvenile fiction'
 - !lcsh 'Families -- Juvenile fiction'
+- GITenberg
 title: 'Three Little Women: A Story for Girls'
 url: http://www.gutenberg.org/ebooks/38029
